[package]
name = "pyagushka"
version = "1.0.0"
edition = "2021"

[lib]
name = "pyagushka"
crate-type = ["cdylib"]

[dependencies]
atty = "0.2.14"
pyo3 = "0.20.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]