[package]
name = "lyagushka"
version = "1.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
pyo3 = { version = "0.23.3", features = ["extension-module"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[lib]
name = "lyagushka"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "lyagushka"
path = "src/bin/bin.rs"